--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.1",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
+    "rc-tween-one": "^2.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
